# cmk

./: .gitignore  CMakeLists.txt  README.md  config.cmake.in
.github/workflows/: linux.yml  macos.yml  windows.yml
modules/: cmk_add_executable.cmake  cmk_get_relative_path.cmake  cmk_include_all_modules.cmake  cmk_sc_add_rel_pth_exe.cmake  cmk_set_system_name.cmake
